--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@
         <h2>3 Blades</h2>
         <p>Rotating three-ray symbol overlaying a dynamic square grid.</p>
       </a>
+      <a class="card" href="ellipses.html">
+        <div class="badge">Blank Tool</div>
+        <h2>Ellipses</h2>
+        <p>Empty starter canvas for ellipse-based experiments.</p>
+      </a>
+      <a class="card" href="bridge.html">
+        <div class="badge">Parabola</div>
+        <h2>Suspended Bridge</h2>
+        <p>Parabolic cable with a tightness slider and pixel highlight.</p>
+      </a>
     </main>
   </body>
 </html>
