--- a/index.html
+++ b/index.html
@@ -74,12 +74,21 @@
         margin: 0;
         color: var(--muted);
       }
+      .repo-link {
+        color: var(--accent);
+        text-decoration: none;
+        font-size: 0.95rem;
+      }
+      .repo-link:hover {
+        text-decoration: underline;
+      }
     </style>
   </head>
   <body>
     <header>
       <h1>Pixels Lab</h1>
       <p>Small interactive sketches. Click a card to open the project.</p>
+      <p><a class="repo-link" href="https://github.com/jerometremblay/pixels">GitHub Repository</a></p>
     </header>
     <main>
       <a class="card" href="3-blades.html">
