--- a/3-blades.html
+++ b/3-blades.html
@@ -89,16 +89,16 @@
     <div class="hud">
       <div id="hud">Grid ready.</div>
       <label>
-        Ray rotation
-        <input type="range" id="rotation" min="0" max="359" value="15" />
-      </label>
-      <label>
-        Square size
+        Size
         <input type="range" id="blockSize" min="8" max="48" step="0.25" value="14" />
       </label>
       <label>
-        Line width
+        Width
         <input type="range" id="lineWidth" min="0.5" max="5" step="0.1" value="3" />
+      </label>
+      <label>
+        Ray rotation
+        <input type="range" id="rotation" min="0" max="359" value="15" />
       </label>
     </div>
     <svg class="grid" id="grid" aria-label="Pixel grid" role="img"></svg>
