--- a/ellipses.html
+++ b/ellipses.html
@@ -79,11 +79,11 @@
     <div class="hud">
       <div id="hud">Ellipses grid ready.</div>
       <label>
-        Square size
+        Size
         <input type="range" id="blockSize" min="8" max="48" step="0.25" value="14" />
       </label>
       <label>
-        Line width
+        Width
         <input type="range" id="lineWidth" min="0.5" max="5" step="0.1" value="3" />
       </label>
       <label>
