--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
     </header>
     <main>
       <a class="card" href="3-blades.html">
-        <div class="badge">SVG Grid</div>
+        <div class="badge">Lines</div>
         <h2>3 Blades</h2>
         <p>Rotating three-ray symbol overlaying a dynamic square grid.</p>
       </a>
       <a class="card" href="ellipses.html">
-        <div class="badge">Blank Tool</div>
+        <div class="badge">Curves</div>
         <h2>Ellipses</h2>
-        <p>Empty starter canvas for ellipse-based experiments.</p>
+        <p>Circles and ellipses.</p>
       </a>
       <a class="card" href="bridge.html">
         <div class="badge">Parabola</div>
