Add rectangles tool and shared styles

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         border-radius: 18px;
         padding: 1.5rem;
         display: grid;
+        align-content: start;
         gap: 0.9rem;
         text-decoration: none;
         color: inherit;
@@ -105,6 +106,16 @@
         <div class="badge">Parabola</div>
         <h2>Suspended Bridge</h2>
         <p>Parabolic cable with a tightness slider and pixel highlight.</p>
+      </a>
+      <a class="card" href="triangles.html">
+        <div class="badge">Angles</div>
+        <h2>Triangles</h2>
+        <p>Triangle outlines with adjustable stroke width.</p>
+      </a>
+      <a class="card" href="rectangles.html">
+        <div class="badge">Frames</div>
+        <h2>Rectangles</h2>
+        <p>Squares and rectangles with rotation and aspect control.</p>
       </a>
     </main>
   </body>
