--- a/bridge.html
+++ b/bridge.html
@@ -4,80 +4,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Suspended Bridge</title>
-    <style>
-      :root {
-        color-scheme: light;
-      }
-      * {
-        box-sizing: border-box;
-      }
-      body {
-        margin: 0;
-        min-height: 100vh;
-        background: #0f172a;
-        font-family: "Space Grotesk", "Segoe UI", system-ui, sans-serif;
-        color: #e2e8f0;
-      }
-      header {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        height: 36px;
-        display: flex;
-        align-items: center;
-        padding: 0 16px;
-        background: rgba(15, 23, 42, 0.85);
-        border-bottom: 1px solid rgba(148, 163, 184, 0.2);
-        backdrop-filter: blur(8px);
-        font-size: 0.85rem;
-        z-index: 10;
-      }
-      header a {
-        color: #cbd5f5;
-        text-decoration: none;
-      }
-      header a:hover {
-        color: #38bdf8;
-      }
-      .grid {
-        width: 100vw;
-        height: 100vh;
-        display: grid;
-        grid-template-columns: repeat(var(--cols), minmax(0, 1fr));
-        grid-auto-rows: 1fr;
-        gap: 2px;
-        padding: 2px;
-      }
-      .hud {
-        position: fixed;
-        top: 52px;
-        left: 16px;
-        background: rgba(15, 23, 42, 0.85);
-        border: 1px solid rgba(148, 163, 184, 0.2);
-        padding: 0.75rem 1rem;
-        border-radius: 12px;
-        font-size: 0.95rem;
-        display: grid;
-        gap: 0.5rem;
-      }
-      .hud label {
-        display: grid;
-        gap: 0.35rem;
-        font-size: 0.85rem;
-        color: #cbd5f5;
-      }
-      .hud input[type="range"] {
-        width: 200px;
-      }
-    </style>
+    <link rel="stylesheet" href="pixels.css" />
   </head>
   <body>
     <header>
-      <a href="index.html">← Back to Pixels Lab</a>
+      <a href="/">← Back to Pixels Lab</a>
     </header>
     <div class="hud">
-      <div id="hud">Bridge ready.</div>
+      <div class="hud-header">
+        <div id="hud">Bridge ready.</div>
+        <button class="hud-toggle" id="hudToggle" aria-label="Toggle controls">×</button>
+      </div>
       <label>
         Size
         <input type="range" id="blockSize" min="8" max="48" step="0.25" value="14" />
@@ -97,6 +34,12 @@
     <script>
       const tightnessInput = document.getElementById("tightness");
       const lineWidthInput = document.getElementById("lineWidth");
+      const hud = document.querySelector(".hud");
+      const hudToggle = document.getElementById("hudToggle");
+      hudToggle.addEventListener("click", () => {
+        hud.classList.toggle("collapsed");
+        hudToggle.textContent = hud.classList.contains("collapsed") ? "☰" : "×";
+      });
 
       const getBridgeMetrics = (metrics) => {
         const tightness = Number(tightnessInput.value) || 0.7;
