Point tool headers back to index

--- a/3-blades.html
+++ b/3-blades.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="/">← Back to Pixels Lab</a>
+      <a href="index.html">← Back to Pixels Lab</a>
     </header>
     <div class="hud">
       <div class="hud-header">
