Update index thumbnails and ordering

--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
         margin: 0;
         color: var(--muted);
       }
+      .thumb {
+        width: 100%;
+        height: auto;
+        border-radius: 12px;
+        border: 1px solid rgba(148, 163, 184, 0.2);
+        box-shadow: 0 12px 24px rgba(15, 23, 42, 0.35);
+      }
       .repo-link {
         color: var(--accent);
         text-decoration: none;
@@ -92,30 +99,35 @@
       <p><a class="repo-link" href="https://github.com/jerometremblay/pixels">GitHub Repository</a></p>
     </header>
     <main>
-      <a class="card" href="3-blades.html">
-        <div class="badge">Lines</div>
-        <h2>3 Blades</h2>
-        <p>Rotating three-ray symbol overlaying a dynamic square grid.</p>
-      </a>
       <a class="card" href="ellipses.html">
         <div class="badge">Curves</div>
         <h2>Ellipses</h2>
         <p>Circles and ellipses.</p>
-      </a>
-      <a class="card" href="bridge.html">
-        <div class="badge">Parabola</div>
-        <h2>Suspended Bridge</h2>
-        <p>Parabolic cable with a tightness slider and pixel highlight.</p>
-      </a>
-      <a class="card" href="triangles.html">
-        <div class="badge">Angles</div>
-        <h2>Triangles</h2>
-        <p>Triangle outlines with adjustable stroke width.</p>
+        <img class="thumb" src="thumbnails/ellipses.png" alt="Ellipses thumbnail" />
       </a>
       <a class="card" href="rectangles.html">
         <div class="badge">Frames</div>
         <h2>Rectangles</h2>
         <p>Squares and rectangles with rotation and aspect control.</p>
+        <img class="thumb" src="thumbnails/rectangles.png" alt="Rectangles thumbnail" />
+      </a>
+      <a class="card" href="triangles.html">
+        <div class="badge">Angles</div>
+        <h2>Triangles</h2>
+        <p>Triangle outlines with adjustable stroke width.</p>
+        <img class="thumb" src="thumbnails/triangles.png" alt="Triangles thumbnail" />
+      </a>
+      <a class="card" href="bridge.html">
+        <div class="badge">Parabola</div>
+        <h2>Suspended Bridge</h2>
+        <p>Parabolic cable with a tightness slider and pixel highlight.</p>
+        <img class="thumb" src="thumbnails/bridge.png" alt="Suspended Bridge thumbnail" />
+      </a>
+      <a class="card" href="3-blades.html">
+        <div class="badge">Lines</div>
+        <h2>3 Blades</h2>
+        <p>Rotating three-ray symbol overlaying a dynamic square grid.</p>
+        <img class="thumb" src="thumbnails/3-blades.png" alt="3 Blades thumbnail" />
       </a>
     </main>
   </body>
