--- a/rectangles.html
+++ b/rectangles.html
@@ -12,9 +12,10 @@
     </header>
     <div class="hud">
       <div class="hud-header">
-        <div id="hud">Rectangle ready.</div>
+        <div class="hud-title">Rectangles</div>
         <button class="hud-toggle" id="hudToggle" aria-label="Toggle controls">×</button>
       </div>
+      <div id="hud">Rectangle ready.</div>
       <label>
         Size
         <input type="range" id="blockSize" min="8" max="48" step="0.25" value="14" />
@@ -52,6 +53,7 @@
       });
 
       const rectBounds = { minX: Infinity, maxX: -Infinity, minY: Infinity, maxY: -Infinity };
+      let highlightCount = 0;
 
       const getRect = (metrics) => {
         const rotation = (Number(rotationInput.value) || 0) * (Math.PI / 180);
@@ -91,11 +93,12 @@
           rectBounds.maxX = -Infinity;
           rectBounds.minY = Infinity;
           rectBounds.maxY = -Infinity;
+          highlightCount = 0;
         },
         hudText: (metrics) =>
-          `Rectangle. Block: ${Math.round(metrics.blockSize)}px. Rotation: ${Number(
+          `Rectangle\nBlock: ${Math.round(metrics.blockSize)}px\nRotation: ${Number(
             rotationInput.value
-          ) || 0}°`,
+          ) || 0}°\nHighlighted: ${highlightCount}`,
         isHighlighted: ({ cx, cy, metrics, helpers }) => {
           const pts = getRect(metrics);
           const distances = [
@@ -108,6 +111,7 @@
         },
         onCell: ({ cx, cy, metrics, highlight }) => {
           if (!highlight) return;
+          highlightCount += 1;
           const half = metrics.blockSize / 2;
           rectBounds.minX = Math.min(rectBounds.minX, cx - half);
           rectBounds.maxX = Math.max(rectBounds.maxX, cx + half);
