--- a/triangles.html
+++ b/triangles.html
@@ -12,9 +12,10 @@
     </header>
     <div class="hud">
       <div class="hud-header">
-        <div id="hud">Triangle ready.</div>
+        <div class="hud-title">Triangles</div>
         <button class="hud-toggle" id="hudToggle" aria-label="Toggle controls">×</button>
       </div>
+      <div id="hud">Triangle ready.</div>
       <label>
         Size
         <input type="range" id="blockSize" min="8" max="48" step="0.25" value="14" />
@@ -82,6 +83,7 @@
       };
 
       const triangleBounds = { minX: Infinity, maxX: -Infinity, minY: Infinity, maxY: -Infinity };
+      let highlightCount = 0;
 
       Pixels.initPixelGrid({
         blockSizeId: "blockSize",
@@ -91,13 +93,14 @@
           triangleBounds.maxX = -Infinity;
           triangleBounds.minY = Infinity;
           triangleBounds.maxY = -Infinity;
+          highlightCount = 0;
         },
         hudText: (metrics) =>
-          `Triangle. Block: ${Math.round(metrics.blockSize)}px. Width: ${Number(
+          `Triangle\nBlock: ${Math.round(metrics.blockSize)}px\nWidth: ${Number(
             lineWidthInput.value
-          ).toFixed(1)}x. Rotation: ${Number(rotationInput.value) || 0}°. Top: ${
+          ).toFixed(1)}x\nRotation: ${Number(rotationInput.value) || 0}°\nTop: ${
             Number(topAngleInput.value) || 60
-          }°`,
+          }°\nHighlighted: ${highlightCount}`,
         isHighlighted: ({ cx, cy, metrics, helpers }) => {
           const points = getTriangle(metrics);
           const distances = [
@@ -109,6 +112,7 @@
         },
         onCell: ({ cx, cy, metrics, highlight }) => {
           if (!highlight) return;
+          highlightCount += 1;
           const half = metrics.blockSize / 2;
           triangleBounds.minX = Math.min(triangleBounds.minX, cx - half);
           triangleBounds.maxX = Math.max(triangleBounds.maxX, cx + half);
